service/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
  namespace: latihan
spec:
  selector:
    app: nura
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
