service/svc-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-nginx-multi
  namespace: lab-nura
spec:
  selector:
    app: deploy-multi
  ports:
    - port: 80
      targetPort: 80
