service/svc-extenal-example.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-example
  labels:
    name: svc-example
spec:
  type: ExternalName
  externalName: example.com
  ports:
    - port: 80

---

apiVersion: v1
kind: Pod
metadata:
  name: curl-example
  labels:
    name: curl-example
spec:
  containers:
    - name: curl
      image: nurawiguna/nginx-curl
