service/svc-nginx-nodeport.yaml

apiVersion: v1
kind: Service
metadata:
  name: svc-nginx
  namespace: lab-nura
spec:
  type: NodePort
  selector:
    name: nginx-for-svc-node-port
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30001
