service/svc-nginx.yaml

apiVersion: v1
kind: Service
metadata:
  name: svc-nginx
spec:
  selector:
    name: nginx
  ports:
    - port: 8080
      targetPort: 80

---

apiVersion: v1
kind: Pod
metadata:
  name: curl-nginx
  labels:
    name: curl-nginx
spec:
  containers:
    - name: curl
      image: nurawiguna/nginx-curl
