service/svc-node-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-node-port
  namespace: latihan
spec:
  type: NodePort
  selector:
    app: nura
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30007
