service/ingress-kind.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-nura
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  namespace: lab-nura
spec:
  rules:
  - host: nura.adhithia.com
    http:
      paths:
      - path: /
        backend:
          serviceName: svc-nginx-multi
          servicePort: 80
