service/svc-nginx-ingress.yaml

apiVersion: v1
kind: Service
metadata:
  name: svc-nginx-for-ingress
  namespace: lab-nura
spec:
  selector:
    name: nginx-for-ingress
  ports:
    - port: 80
      targetPort: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  labels:
    name: nginx-ingress
  namespace: lab-nura
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"

# spec:
#   rules:
#     - host: nginx.nurawiguna.local
#       http:
#         paths:
#           - path: /
#             backend:
#               serviceName: svc-nginx-for-ingress
#               servicePort: 80

spec:
  rules:
  - host: nginx.nurawiguna.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svc-nginx-for-ingress
            port:
              number: 80
